# dash-app-template

./: .gitignore  LICENSE  README.md  pyproject.toml  run_app.py
app/: app.py  constants.py  controller.py  user_content.py  view.py  view_components.py
app/assets/: template.css
app/pages/: page_about.py  page_example_dynamic.py  page_example_static.py
