[tool.poetry]
name = "dash-app-template"
version = "0.1.0"
description = ""
authors = ["mpalaiokostas <m.palaiokostas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pandas = "^1.0.3"
dash = "^1.11.0"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
